syntax="proto3";

package Data;
option csharp_namespace="App.Data";

message SampleData {
	int32 id = 1;
	string name = 2;
}