syntax="proto3";

import "data.proto";

package Message;
option csharp_namespace="App.Message";

message ClientMessage {
	Data.SampleData data = 1;
}